# Jupiter

./: .gitignore  Cargo.toml  Claude.md  README.md  code-review.md  default.toml  help.md  optimization_plan.md  plan.md  research.md  result.tiff  todo.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.github/workflows/: ci.yml  release.yml
crates/jupiter-cli/: Cargo.toml  build.rs
crates/jupiter-cli/src/: main.rs  summary.rs
crates/jupiter-cli/src/commands/: auto_crop.rs  config.rs  filter.rs  info.rs  mod.rs  pipeline.rs  quality.rs  sharpen.rs  stack.rs
crates/jupiter-core/: Cargo.toml
crates/jupiter-core/src/: consts.rs  error.rs  frame.rs  lib.rs
crates/jupiter-core/src/align/: centroid.rs  dispatcher.rs  enhanced_phase.rs  gradient_correlation.rs  mod.rs  phase_correlation.rs  pyramid.rs  subpixel.rs
crates/jupiter-core/src/color/: debayer.rs  mod.rs  process.rs
crates/jupiter-core/src/compute/: backend.rs  cpu.rs  mod.rs  wgpu_backend.rs
crates/jupiter-core/src/compute/shaders/: bilinear_shift.wgsl  convolve_separable.wgsl  cross_power.wgsl  elementwise.wgsl  fft_stockham.wgsl  find_peak.wgsl  hann_window.wgsl  real_to_complex.wgsl  transpose.wgsl
crates/jupiter-core/src/detection/: config.rs  mod.rs  planet.rs  threshold.rs
crates/jupiter-core/src/filters/: gaussian_blur.rs  histogram.rs  levels.rs  mod.rs  rgb_align.rs  unsharp_mask.rs
crates/jupiter-core/src/io/: autocrop.rs  crop.rs  image_io.rs  mod.rs  ser.rs  ser_writer.rs
crates/jupiter-core/src/io/autocrop/: components.rs  config.rs  detection.rs  engine.rs  mod.rs  morphology.rs  temporal.rs  threshold.rs
crates/jupiter-core/src/pipeline/: color.rs  config.rs  helpers.rs  mod.rs  mono.rs  orchestrator.rs  types.rs
crates/jupiter-core/src/quality/: gradient.rs  laplacian.rs  mod.rs  scoring.rs
crates/jupiter-core/src/sharpen/: deconvolution.rs  mod.rs  wavelet.rs
crates/jupiter-core/src/stack/: ap_grid.rs  ap_local.rs  drizzle.rs  mean.rs  median.rs  mod.rs  multi_point.rs  reference.rs  sigma_clip.rs  surface_warp.rs
crates/jupiter-core/tests/: integration_test.rs  test_align.rs  test_alignment_methods.rs  test_autocrop.rs  test_color_process.rs  test_compute_cpu.rs  test_config.rs  test_crop.rs  test_debayer.rs  test_deconvolution.rs  test_drizzle.rs  test_filters.rs  test_image_io.rs  test_median_sigma.rs  test_multi_point_color.rs  test_quality.rs  test_ser.rs  test_stack.rs  test_streaming.rs  test_surface_warp.rs  test_wavelet.rs
crates/jupiter-core/tests/common/: mod.rs
crates/jupiter-gui/: Cargo.toml
crates/jupiter-gui/src/: app.rs  convert.rs  main.rs  messages.rs  progress.rs  state.rs  worker.rs
crates/jupiter-gui/src/panels/: controls.rs  crop_interaction.rs  helpers.rs  menu_bar.rs  mod.rs  status.rs  viewport.rs
crates/jupiter-gui/src/panels/controls/: actions.rs  alignment.rs  crop.rs  debayer.rs  file.rs  filters.rs  layout.rs  mod.rs  score.rs  sharpen.rs  stack.rs
crates/jupiter-gui/src/panels/general_controls_bar/: actions.rs  crop.rs  debayer.rs  file.rs  layout.rs  mod.rs
crates/jupiter-gui/src/states/: choices.rs  config.rs  crop.rs  mod.rs  stage_status.rs  ui.rs  viewport.rs
crates/jupiter-gui/src/workers/: align.rs  cache.rs  dispatch.rs  io.rs  mod.rs  pipeline.rs  postprocess.rs  scoring.rs  stacking.rs
crates/jupiter-gui/src/workers/stacking/: drizzle.rs  mod.rs  multi_point.rs  standard.rs  surface_warp.rs
docs/: CLI.md  autocropp_research.md  gpu-optimization.md  multi-point-stacking-research.md  rust-ui-frameworks.md
packaging/linux/: jupiter.desktop
packaging/macos/: Info.plist  entitlements.plist
packaging/windows/: jupiter.wxs
