[workspace]
resolver = "2"
members = ["crates/jupiter-core", "crates/jupiter-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core computation
ndarray = "0.16"
rayon = "1.10"
rustfft = "6.2"
num-complex = "0.4"
num-traits = "0.2"

# Image I/O
image = "0.25"
byteorder = "1.5"
memmap2 = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
