[workspace]
resolver = "2"
members = ["crates/jupiter-core", "crates/jupiter-cli", "crates/jupiter-gui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core computation
ndarray = { version = "0.17.2", features = ["rayon"] }
rayon = "1.10"
rustfft = "6.2"
num-complex = "0.4"
num-traits = "0.2"

# Image I/O
image = "0.25"
byteorder = "1.5"
memmap2 = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.16"
indicatif = "0.18.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "1.0.0"

# GUI
eframe = { version = "0.33", default-features = false, features = [
  "default_fonts",
  "wgpu",
] }
egui-wgpu = "0.33"
egui = "0.33"
egui_plot = "0.34"
rfd = "0.17"

# GPU compute
wgpu = "28"
