[package]
name = "jupiter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "jupiter"
path = "src/main.rs"

[features]
default = []
gpu = ["jupiter-core/gpu"]

[dependencies]
jupiter-core = { path = "../jupiter-core" }
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
