[package]
name = "jupiter-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jupiter-gui"
path = "src/main.rs"

[features]
default = []
gpu = ["jupiter-core/gpu"]

[dependencies]
jupiter-core = { path = "../jupiter-core" }
eframe = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
rfd = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
